<resources>
    <string name="app_name">FitnessFlow</string>
    <string name="today">今日</string>
    <string name="plan">计划</string>
    <string name="library">收藏</string>
    <string name="mine">我的</string>
    <string name="Sunday">日</string>
    <string name="Monday">一</string>
    <string name="Tuesday">二</string>
    <string name="Wednesday">三</string>
    <string name="Thursday">四</string>
    <string name="Friday">五</string>
    <string name="Saturday">六</string>
    <string name="Jan">一月</string>
    <string name="Feb">二月</string>
    <string name="March">三月</string>
    <string name="Apr">四月</string>
    <string name="May">五月</string>
    <string name="Jun">六月</string>
    <string name="Jul">七月</string>
    <string name="Aug">八月</string>
    <string name="Sept">九月</string>
    <string name="Oct">十月</string>
    <string name="Nov">十一月</string>
    <string name="Dec">十二月</string>
    <string name="Template">模板</string>
    <string name="Chest">胸部</string>
    <string name="Shoulder">肩部</string>
    <string name="BackGroup">背部</string>
    <string name="Arms">臂部</string>
    <string name="Legs">腿部</string>
    <string name="Belly">腹部</string>
    <string name="Aerobics">有氧</string>
    <string name="Others">其他</string>
    <string name="action_name">动作名称</string>
    <string name="is_had_weight_units">有无重量单位</string>
    <string name="fill_in">请输入</string>
    <string name="WeightUnit">重量单位</string>
    <string name="weight_unit_example">例如KG、LBS等</string>
    <string name="InitWeight">起始重量</string>
    <string name="WeightOfIncreaseProgressively">递增重量</string>
    <string name="InitNum">起始数量</string>
    <string name="NumOfIncreaseProgressively">递增数量</string>
    <string name="OtherUnit">每组单位</string>
    <string name="other_unit_example">例如个、次、米、分钟等</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="form_incomplete">请填写必要信息</string>
    <string name="add_successful">添加成功</string>
    <string name="add_failed">添加失败，请重试</string>
    <string name="del_failed">删除失败，请重试</string>
    <string name="add_times_text">添加次数：</string>
    <string name="action_num">动作数量：</string>
    <string name="confirm_to_delete">是否确认删除:</string>
    <string name="alert">提示</string>
    <string name="modify_successful">修改成功</string>
    <string name="modify_failed">修改失败，请重试</string>
    <string name="save_failed">保存失败，请重试</string>
    <string name="template_name">模板名称</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="save_process">保存中</string>
    <string name="loading_failed">加载失败，请重试</string>
    <string name="weight_string">重量：</string>
    <string name="target_string">目标：</string>
    <string name="multiple_select_toast">过往日期不可选择</string>
    <string name="weight_boundary">重量区间：</string>
    <string name="today_has_no_plan">今日无计划，请点击添加</string>
    <string name="can_not_unfold">今日无计划，请前往计划页添加</string>
    <string name="slash">/</string>
    <string name="date_has_no_plan">无可用计划</string>
    <string name="stature">身高</string>
    <string name="stature_in_form">身高(单位：米)</string>
    <string name="age">年龄</string>
    <string name="sex">性别:</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="weight">体重</string>
    <string name="weight_in_form">体重(单位：公斤)</string>
    <string name="body_fat">体脂</string>
    <string name="bmi">BMI</string>
    <string name="exercise_frequency_map">近30天训练热图</string>
    <string name="not_filled">待填写</string>
    <string name="KG">KG</string>
    <string name="auto_filled">不填写将自动计算</string>
    <string name="instruction">使用说明</string>
    <string name="recommendation_feedback">建议及反馈</string>
    <string name="about">关于</string>
    <string name="data_clear">数据清除</string>
    <string name="plan_days">已训练 count 天</string>
    <string name="trend">趋势</string>
    <string name="no_data_record">暂无记录数据</string>
    <string name="instruction_one">1) 在\"收藏\"页根据不同肌肉群自定义添加相应动作</string>
    <string name="instruction_two">2) 可在\"收藏\"页的"模板"中创建训练模板，用以添加至训练计划</string>
    <string name="instruction_three">3) 在\"计划\"页中创建个性化的健身计划</string>
    <string name="instruction_four">4) 在\"今日\"页中记录计划的完成情况</string>
    <string name="instruction_five">5) 可在\"我的\"页中记录相应身身体数据</string>
    <string name="recommendation_feedback_one">如果您有建议或发现问题</string>
    <string name="recommendation_feedback_two">可通过以下邮箱联系我</string>
    <string name="recommendation_feedback_three">jiez0714@gmail.com</string>
    <string name="about_one">此应用为个人开发,无广告及收费</string>
    <string name="about_two">项目开源在GitHub中</string>
    <string name="about_three">https://github.com/xzmpyy</string>
    <string name="about_four">除手机震动权限外无需任何权限，不会收集您的数据</string>
    <string name="about_five">如对您有帮助，请在应用商店评价或在GitHub帮忙Star</string>
    <string name="about_six">可通过以下邮箱联系我</string>
    <string name="about_seven">jiez0714@gmail.com</string>
    <string name="data_clear_one">训练计划清除</string>
    <string name="data_clear_two">动作及模板清除</string>
    <string name="data_clear_three">个人数据清除</string>
    <string name="private_matter">《隐私政策》与《用户协议》</string>
    <string name="private_matter_info">
        应国家相关规定要求，在此向您提示本应用的《隐私政策》与《用户协议》\n
        提示： 请您仔细阅读这份协议。本协议将告知您应用的详细信息及隐私涉及，若点击同意则表明您已完全同意并接受本协议，
        愿意遵守本协议的各项规则、规范的全部内容，若不同意则可点击退出按钮停止使用本应用。\n
        \n
        《隐私政策》\n
        1) FitnessFlow是一个个人开发的，用于管理建设计划的应用程序，此程序由个人开发，并开源在GitHub上，
        应用只会获取您设备的震动权限，用以您在进行错误操作时的触感提示，除此之外无任何其他权限需求，因此不会收集您的任何数据。\n
        2) 您使用或继续使用此应用，即意味着同意此《隐私政策》中对您震动权限的获取，如若您不同意，可退出应用或在设置中关闭震动权限。\n
        3) 如果您有任何疑问可通过jiez0714@gmail.com联系本应用开发者\n
        \n
        《用户协议》\n
        1) 本应用可自定义创建健身动作，请您不要起涉及政治、人身攻击、邪教等有害动作名称，并进行传播，如有此行为，后果由使用者自行承担。\n
        2) 本应用特有的标识、版面设计、编排方式等版权均属本应用享有，未经本应用许可授权，不得任意复制或转载，若利用本应用源码进行有害传播，将追究法律责任。\n
        3) 如果您有任何疑问可通过jiez0714@gmail.com联系本应用开发者\n
    </string>
    <string name="agree">同意</string>
    <string name="quit">退出</string>
</resources>
