<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        android:elevation="@dimen/viewElevation">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:weightSum="5">
            <Button
                style="@style/muscleGroupNavigator"
                android:id="@+id/Template"
                android:textColor="@color/primaryTextColor"
                android:text="@string/Template"/>
            <Button
                style="@style/muscleGroupNavigator"
                android:id="@+id/Chest"
                android:text="@string/Chest"/>
            <Button
                style="@style/muscleGroupNavigator"
                android:id="@+id/Shoulder"
                android:text="@string/Shoulder"/>
            <Button
                style="@style/muscleGroupNavigator"
                android:id="@+id/BackGroup"
                android:text="@string/BackGroup"/>
            <Button
                style="@style/muscleGroupNavigator"
                android:id="@+id/Arms"
                android:text="@string/Arms"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:weightSum="4">
            <Button
                style="@style/muscleGroupNavigator"
                android:id="@+id/Legs"
                android:text="@string/Legs"/>
            <Button
                style="@style/muscleGroupNavigator"
                android:id="@+id/Belly"
                android:text="@string/Belly"/>
            <Button
                style="@style/muscleGroupNavigator"
                android:id="@+id/Aerobics"
                android:text="@string/Aerobics"/>
            <Button
                style="@style/muscleGroupNavigator"
                android:id="@+id/Others"
                android:text="@string/Others"/>
        </LinearLayout>
    </LinearLayout>
    <com.example.fitnessflow.splash.ViewPagerScrollerFalse
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/muscle_vp"
        />
</LinearLayout>