<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:minWidth="350dp"
    android:padding="@dimen/viewPaddingHorizontal"
    android:layout_height="wrap_content">
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"
        android:background="@color/colorPrimary"
        android:layout_gravity="center"
        tools:ignore="ContentDescription" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_one"
        android:textAlignment="center"
        android:textSize="@dimen/smallTextSize"
        android:textColor="@color/primaryTextColor"
        android:background="@drawable/underline_background"
        android:layout_marginBottom="@dimen/viewMargin"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_two"
        android:textAlignment="center"
        android:textSize="@dimen/smallTextSize"
        android:textColor="@color/primaryTextColor"
        android:background="@drawable/underline_background"
        android:layout_marginBottom="@dimen/viewMargin"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_three"
        android:textAlignment="center"
        android:textSize="@dimen/smallTextSize"
        android:textStyle="bold"
        android:textColor="@color/primaryButtonBackground"
        android:background="@drawable/underline_background"
        android:layout_marginBottom="@dimen/viewMargin"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_four"
        android:textAlignment="center"
        android:textSize="@dimen/smallTextSize"
        android:textColor="@color/primaryTextColor"
        android:background="@drawable/underline_background"
        android:layout_marginBottom="@dimen/viewMargin"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_five"
        android:textAlignment="center"
        android:textSize="@dimen/smallTextSize"
        android:textColor="@color/primaryTextColor"
        android:background="@drawable/underline_background"
        android:layout_marginBottom="@dimen/viewMargin"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_six"
        android:textAlignment="center"
        android:textSize="@dimen/smallTextSize"
        android:textColor="@color/primaryTextColor"
        android:background="@drawable/underline_background"
        android:layout_marginBottom="@dimen/viewMargin"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_seven"
        android:textAlignment="center"
        android:textSize="@dimen/smallTextSize"
        android:textStyle="bold"
        android:textColor="@color/primaryButtonBackground"
        android:background="@drawable/underline_background"
        android:layout_marginBottom="@dimen/viewMargin"/>
</LinearLayout>