<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:minWidth="350dp"
    android:layout_height="wrap_content"
    android:padding="@dimen/viewPaddingVertical"
    >
    <TextView
        style="@style/universalTextStyle"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textSize="@dimen/bigTextSize"
        android:id="@+id/muscle_group"
        />
    <TextView
        style="@style/universalTextStyle"
        android:text="@string/action_name"/>
    <EditText
        style="@style/editTextStyle"
        android:inputType="text"
        android:hint="@string/fill_in"
        android:id="@+id/action_name"
        android:labelFor="@+id/action_name" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            style="@style/universalTextStyle"
            android:text="@string/is_had_weight_units"
            android:layout_centerVertical="true"
            />
        <Switch android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:thumb="@drawable/switch_button"
            android:track="@drawable/switch_track"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:checked="true"
            android:id="@+id/form_type_switch"
            />
    </RelativeLayout>
    <com.example.zhangjie.fitnessflow.library.library_child_fragments.ViewPagerForAdditionForm
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/form_type_page"
        />
</LinearLayout>