<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:minWidth="350dp"
        android:weightSum="2"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                style="@style/universalTextStyle"
                android:text="@string/stature_in_form"/>
            <EditText
                style="@style/editTextStyle"
                android:inputType="numberDecimal"
                android:hint="@string/fill_in"
                android:id="@+id/stature"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                style="@style/universalTextStyle"
                android:text="@string/age"/>
            <EditText
                style="@style/editTextStyle"
                android:inputType="number"
                android:hint="@string/fill_in"
                android:id="@+id/age"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:minWidth="350dp"
        android:weightSum="2"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                style="@style/universalTextStyle"
                android:text="@string/weight_in_form"/>
            <EditText
                style="@style/editTextStyle"
                android:inputType="numberDecimal"
                android:hint="@string/fill_in"
                android:id="@+id/weight"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                style="@style/universalTextStyle"
                android:text="@string/body_fat"/>
            <EditText
                style="@style/editTextStyle"
                android:inputType="numberDecimal"
                android:hint="@string/auto_filled"
                android:id="@+id/fat"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="350dp"
        android:orientation="horizontal"
        android:weightSum="2"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                style="@style/universalTextStyle"
                android:text="@string/bmi"/>
            <EditText
                style="@style/editTextStyle"
                android:inputType="numberDecimal"
                android:hint="@string/auto_filled"
                android:id="@+id/bmi"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_vertical|center"
            tools:ignore="UselessLeaf">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">
                <TextView
                    style="@style/universalTextStyle"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:text="@string/sex"/>
                <TextView
                    style="@style/universalTextStyle"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:id="@+id/sex"
                    android:text="@string/female"/>
            </LinearLayout>
            <Switch android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:thumb="@drawable/switch_button"
                android:track="@drawable/switch_track"
                android:checked="false"
                android:id="@+id/sex_switch"
                android:layout_gravity="center"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>