<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="@dimen/viewMargin"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".splash.PrivateActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="@dimen/navigatorTextSize"
        android:text="@string/private_matter"
        android:textColor="@color/primaryTextColor"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/viewMargin"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/private_matter_info"
        android:textSize="@dimen/smallTextSize"
        android:textColor="@color/primaryTextColor"
        android:scrollbars="vertical"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="@dimen/minButtonWidth"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textSize="@dimen/navigatorTextSize"
            android:textColor="@color/primaryRed"
            android:id="@+id/quit"
            android:text="@string/quit"
            android:layout_marginStart="70dp"/>
        <Button
            android:layout_width="@dimen/minButtonWidth"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:layout_alignParentEnd="true"
            android:textSize="@dimen/navigatorTextSize"
            android:textColor="@color/primaryGreen"
            android:id="@+id/agree"
            android:text="@string/agree"
            android:layout_marginEnd="70dp"/>
    </RelativeLayout>
</LinearLayout>