<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="5"
    android:paddingTop="@dimen/viewPaddingVertical"
    android:paddingBottom="@dimen/viewPaddingVertical"
    android:background="@drawable/rect_background"
    >
    <LinearLayout
        style="@style/navigationIconsLinearLayoutStyle"
        >
        <TextView
            style="@style/navigationTextStyle"
            android:text="@string/today"
            android:id="@+id/today"
            />
    </LinearLayout>
    <LinearLayout
        style="@style/navigationIconsLinearLayoutStyle"
        >
        <TextView
            style="@style/navigationTextStyle"
            android:text="@string/plan"
            android:textColor="@color/primaryWhite"
            android:id="@+id/plan"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_height="match_parent"
        style="@style/navigationIconsLinearLayoutStyle"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:gravity="center_vertical"
       >
        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/edit_icon"
            tools:ignore="ContentDescription"
            android:background="@drawable/round_rect_background"
            android:id="@+id/operation"
            android:outlineProvider="bounds"
            android:elevation="@dimen/viewElevation"
            />
    </LinearLayout>
    <LinearLayout
        style="@style/navigationIconsLinearLayoutStyle"
        >
        <TextView
            style="@style/navigationTextStyle"
            android:text="@string/library"
            android:id="@+id/library"
            />
    </LinearLayout>
    <LinearLayout
        style="@style/navigationIconsLinearLayoutStyle"
        >
        <TextView
            style="@style/navigationTextStyle"
            android:text="@string/mine"
            android:id="@+id/mine"
            />
    </LinearLayout>
</LinearLayout>